# ai-entropy

./: .gitignore  AWS_SERVICES_LIST.md  DEPLOYMENT.md  README.md  amplify.yml  database_system_design.md  design.md  docker-compose.yml  entropy.backup  entropy_backup.dump  entropy_backup.sql  neo4j.dump  package-lock.json  package.json  quick-start.ps1  requirements.md  summary.md  turbo.json
.github/workflows/: keep-alive.yml
apps/ai-agent/: .dockerignore  .env.aws.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lambda_handler.py  main.py  package.json  pyproject.toml  render.yaml  requirements.txt  serverless.yml  setup.py  vercel.json
apps/ai-agent/app/: app.py  config.py  main.py
apps/ai-agent/app/api/: __init__.py  auth.py
apps/ai-agent/app/api/routes/: __init__.py  documents.py  evaluation.py  flashcards.py  gamification.py  graph.py  mastery.py  mindmap.py  qa.py  quiz.py  reasoning.py
apps/ai-agent/app/core/: auth.py  cache.py  config.py  database.py  document_processor.py  embeddings.py  llm.py  prompts.py  vector_store.py
apps/ai-agent/app/middleware/: __init__.py  auth.py  observability.py  rate_limit.py
apps/ai-agent/app/schemas/: chat.py  evaluation.py  flashcard.py  graph.py  mastery.py  mindmap.py  quiz.py  reasoning.py
apps/ai-agent/app/services/: __init__.py  agentic_rag_service.py  bedrock_service.py  chat_service.py  concept_seeder.py  embedding_service.py  flashcard_service.py  groq_service.py  knowledge_graph_service.py  langchain_service.py  mastery_service.py  mastery_service.py.bak  mindmap_service.py  multilingual_service.py  quiz_service.py  reasoning_service.py  research.py  rubric_service.py  s3_service.py  tavily_service.py
apps/ai-agent/app/services/ai_brain/: __init__.py  cognitive_state.py  concept_mapper.py  context_assembler.py  graph_traversal.py  intent_detector.py  nli_validator.py  reasoning_engine.py  trust_scorer.py
apps/ai-agent/app/services/anti_abuse/: __init__.py  ip_clustering.py  similarity_detector.py  vote_analyzer.py
apps/ai-agent/app/services/events/: __init__.py  event_bus.py  event_definitions.py  event_handlers.py
apps/ai-agent/app/services/gamification/: __init__.py  achievement_engine.py  streak_manager.py  xp_engine.py
apps/ai-agent/app/utils/: helpers.py  logger.py  retry.py
apps/ai-agent/app/workers/: gamification_worker.py  mastery_worker.py  rag_worker.py  tavily_worker.py
apps/ai-agent/prisma/: schema.prisma
apps/ai-agent/tests/: test_integration.py
apps/app/: .gitignore  .npmrc  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/app/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/app/app/about/: page.tsx
apps/app/app/actions/: answers.ts  cognitive.ts  comments.ts  credits.ts  documents.ts  doubts.ts  votes.ts
apps/app/app/ai-agent/: page.tsx
apps/app/app/api/achievements/: route.ts
apps/app/app/api/ai-agent/: route.ts
apps/app/app/api/answers/: route.ts
apps/app/app/api/communities/: route.ts
apps/app/app/api/credits/: route.ts
apps/app/app/api/doubts/: route.ts
apps/app/app/api/leaderboard/: route.ts
apps/app/app/api/search/: route.ts
apps/app/app/ask/: page.tsx
apps/app/app/communities/: page.tsx
apps/app/app/create-community/: page.tsx
apps/app/app/happenings/: page.tsx
apps/app/app/leaderboard/: page.tsx
apps/app/app/learn/: page.tsx
apps/app/app/mentorship/: page.tsx
apps/app/app/offline/: page.tsx
apps/app/app/profile/: page.tsx
apps/app/app/search/: page.tsx
apps/app/components/: CommentCard.tsx  CommentSection.tsx  VoteButtons.tsx  adaptive-learning-interface.tsx  answer-form.tsx  answers-list.tsx  answers-section.tsx  ask-doubt-form.tsx  auth-modal-provider.tsx  auth-modal.tsx  auth-provider.tsx  client-layout.tsx  code-editor.tsx  community-filters.tsx  credits-display.tsx  doubt-card.tsx  doubt-detail.tsx  doubts-feed.tsx  edit-profile-modal.tsx  error-boundary.tsx  feed-content.tsx  footer.tsx  header.tsx  hero-section.tsx  image-upload.tsx  language-switcher.tsx  sidebar.tsx  theme-toggle.tsx  wip-feature.tsx
apps/app/components/ai-agent/: assessments-agent.tsx  charts-agent.tsx  chat-agent.tsx  cognitive-trace-card.tsx  exam-mode-overlay.tsx  flashcards-agent.tsx  live-knowledge-graph.tsx  mindmap-agent.tsx  mode-selector.tsx  qa-agent.tsx  quiz-agent.tsx
apps/app/components/ui/: alpha-badge.tsx  card.tsx  sidebar.tsx
apps/app/docs/: ACHIEVEMENT_SYSTEM.md  HIGH_LEVEL_ARCHITECTURE.md
apps/app/hooks/: use-auth-modal.tsx  use-speech-to-text.ts
apps/app/lib/: achievements-engine.ts  apiAuth.ts  auth.ts  gamification.ts  spark-api.ts  utils.ts  validations.ts
apps/app/prisma/: schema.prisma  seed.ts
apps/app/prisma/migrations/: manual_fix.sql
apps/app/public/: manifest.json  sw.js
apps/app/styles/: globals.css
apps/app/types/: doubt.ts
apps/tests/: jest.config.ts  package.json  tsconfig.json
apps/tests/__tests__/: auth.test.ts
apps/tests/__tests__/api/: auth.test.ts
apps/tests/app/__tests__/: smoke.test.ts
docs/: AI_BRAIN_ARCHITECTURE.md  AI_BRAIN_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  CLEANUP_COMPLETE.md  COMPONENT_RESPONSIVENESS_CHECKLIST.md  DEMO_GUIDE.md  DEMO_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_IMPLEMENTATION_STATUS.md  GAME_ENGINE_ARCHITECTURE.md  GAMIFICATION.md  IMPLEMENTATION_STATUS.md  NLI_ARCHITECTURE.md  PHASE1_COMPLETE.md  PHASE6_COMPLETE.md  README_COMPLETE.md  RESPONSIVE_IMPROVEMENTS_SUMMARY.md  SCHEMA_MIGRATION_PLAN.md  SESSION_COMPLETION_SUMMARY.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_SUMMARY_ENGINEERING.md  TECHNICAL_SUMMARY_PROJECT_MANAGEMENT.md  TESTING_COMPREHENSIVE.md  TESTING_GUIDE.md  TRUST_AND_ABUSE_MODEL.md  WORK_COMPLETION_SUMMARY.md  database_system_design.md  summary.md
infrastructure/: README.md
infrastructure/cdk/: cdk.json  package.json  tsconfig.json
infrastructure/cdk/lib/: entropy-stack.ts  novyra-stack.ts
infrastructure/iam/: entropy-lambda-policy.json  novyra-lambda-policy.json
infrastructure/lambda/: build.ps1
(+52 files in other folders)
