[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "docx2txt>=0.9",
    "fastapi>=0.128.0",
    "gpt4all>=2.8.2",
    "groq>=0.37.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "mangum>=0.20.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.40.0",
    "wikipedia>=1.4.0",
]
