[project]
name = "entropy-ai-engine"
version = "3.0.0"
description = "Entropy AI Engine — Structured Reasoning, Knowledge Graph, Mastery Tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "fastapi==0.128.0",
    "google-generativeai==0.8.6",
    "neo4j==6.1.0",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "mangum==0.20.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pypdf==6.6.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.21",
    "tenacity==9.1.2",
    "deep-translator==1.11.4",
    "langdetect==1.0.9",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.11",
    "uvicorn[standard]==0.40.0",
    "requests==2.32.5",
    "redis==7.2.1",
    "python-json-logger==4.0.0",
    "langchain-core==1.2.7",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.0",
    "langchain-google-genai==4.2.1",
    "langchain-pinecone==0.2.13",
    "pinecone==7.3.0",
    "prisma==0.15.0",
    "boto3==1.42.62",
    "botocore==1.42.62",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "magnum==21.0.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "automaton==3.3.0",
    "autopage==0.6.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "cachetools==7.0.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cliff==4.13.2",
    "cmd2==3.4.0",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dataclasses-json==0.6.7",
    "debtcollector==3.0.0",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "dogpile-cache==1.5.0",
    "ecdsa==0.19.1",
    "eventlet==0.40.4",
    "fasteners==0.20",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "futurist==3.2.1",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.2",
    "google-api-python-client==2.190.0",
    "google-auth==2.48.0",
    "google-auth-httplib2==0.3.0",
    "google-genai==1.65.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httptools==0.7.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "iso8601==2.1.0",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "jmespath==1.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "keystoneauth1==5.13.1",
    "keystonemiddleware==12.0.0",
    "kombu==5.6.2",
    "langchain-classic==1.0.1",
    "langchain-openai==1.1.7",
    "langsmith==0.6.4",
    "lxml==6.0.2",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "mdurl==0.1.2",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "netaddr==1.3.0",
    "networkx==3.6.1",
    "nodeenv==1.10.0",
    "numpy==2.4.1",
    "openai==2.24.0",
    "openstacksdk==4.10.0",
    "orjson==3.11.5",
    "os-service-types==1.8.2",
    "osc-lib==4.4.0",
    "oslo-cache==4.1.1",
    "oslo-concurrency==7.4.0",
    "oslo-config==10.3.0",
    "oslo-context==6.3.0",
    "oslo-db==18.0.0",
    "oslo-i18n==6.7.2",
    "oslo-log==8.1.0",
    "oslo-messaging==17.3.0",
    "oslo-metrics==0.15.1",
    "oslo-middleware==8.0.0",
    "oslo-policy==5.0.0",
    "oslo-reports==3.7.0",
    "oslo-serialization==5.9.1",
    "oslo-service==4.5.1",
    "oslo-upgradecheck==2.7.1",
    "oslo-utils==10.0.0",
    "oslo-versionedobjects==3.9.0",
    "packaging==24.2",
    "paste==3.10.1",
    "pastedeploy==3.1.0",
    "pbr==7.0.3",
    "pecan==1.7.0",
    "pinecone-plugin-assistant==1.8.0",
    "pinecone-plugin-interface==0.0.7",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "prettytable==3.17.0",
    "prometheus-client==0.24.1",
    "propcache==0.4.1",
    "proto-plus==1.27.1",
    "protobuf==5.29.6",
    "psutil==7.2.2",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycadf==4.0.1",
    "pycparser==2.23",
    "pydantic-core==2.41.5",
    "pydot==4.0.1",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pyopenssl==25.3.0",
    "pyparsing==3.3.2",
    "pyperclip==1.11.0",
    "pyreadline3==3.5.4",
    "python-barbicanclient==7.3.0",
    "python-cinderclient==9.9.0",
    "python-dateutil==2.9.0.post0",
    "python-glanceclient==4.11.0",
    "python-heatclient==5.1.0",
    "python-keystoneclient==5.8.0",
    "python-neutronclient==11.8.0",
    "python-novaclient==18.12.0",
    "python-octaviaclient==3.13.0",
    "python-openstackclient==9.0.0",
    "python-swiftclient==4.10.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "repoze-lru==0.7",
    "requests-toolbelt==1.0.0",
    "requestsexceptions==1.4.0",
    "rfc3986==2.0.0",
    "rich==14.3.3",
    "rich-argparse==1.7.2",
    "routes==2.5.1",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "s3transfer==0.16.0",
    "setuptools==82.0.1",
    "simplegeneric==0.8.1",
    "simsimd==6.5.13",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.2",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "statsd==4.0.1",
    "stevedore==5.7.0",
    "taskflow==6.2.0",
    "tavily-python==0.7.22",
    "testresources==2.0.2",
    "testscenarios==0.5.0",
    "testtools==2.8.5",
    "tiktoken==0.12.0",
    "tomlkit==0.14.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uuid-utils==0.13.0",
    "vine==5.1.0",
    "warlock==2.1.0",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "webob==1.8.9",
    "websockets==16.0",
    "werkzeug==3.1.6",
    "wrapt==2.1.2",
    "wsme==0.12.1",
    "yappi==1.7.3",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
